corrected alignment of radial gauge

--- a/src/app/gauges/radial-gauge-animation/radial-gauge-animation.component.scss
+++ b/src/app/gauges/radial-gauge-animation/radial-gauge-animation.component.scss
@@ -1,13 +1,15 @@
 .sample-container {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    display:inline-block;
 }
 
 .sample-control {
     display: block;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .sample-button {
